NEWS for Engine PKCS#11 -- History of user visible changes

New in 0.2.1; unreleased;
* Added "--with-pkcs11-module" configure option; addresses #36
  (Michał Trojnara)
* Fixed OpenSSL engines directory autoselection (Michał Trojnara)
* Fixed PIN-less access to public keys (Mouse)
* Require new libp11 0.3.1 for PKCS11_enumerate_public_keys()
  (Michał Trojnara)

New in 0.2.0; 2015-10-09; Nikos Mavrogiannopoulos
* Added support for ECDSA when compiled with libp11 0.3.0
  (Douglas E. Engert)
* Updated engine name to match other openssl engines
* Added support for PKCS #11 URLs -RFC7512- when loading keys
  or certificates (David Woodhouse)
* Added support for id_<ID> legacy object identifier (Petr Písař)
* When no module is set default to p11-kit-proxy.so, allowing
  to access any available PKCS #11 object in the system
  (David Woodhouse)

New in 0.1.8; 2010-01-07; Andreas Jellinghaus
* Fix problem causing slot_n parsing returning not certs or keys 
  by Camille Moncelier
* Fix missing declaration of set_init_args symbol
  by Arfrever Frehtes Taifersar Arahesis

New in 0.1.7; 2009-10-20; Andreas Jellinghaus
* Buffer overrun fixed by David Smith

New in 0.1.6; 2009-06-15; Andreas Jellinghaus
* Fixed set_pin (strdup causes segfault in OPENSSL_CLEANSE later)
* Require new libp11 0.2.5 with new function to get the slot id.
* Revert changes to slot parsing code - seems partial bogus and
  orginal author doesn't respond to questions.
* print slot id in verbose mode (Douglas E. Engert).

New in 0.1.5; 2008-07-31; Andreas Jellinghaus
* Build system rewritten (NOTICE: configure options was modified). 
  The build system can produce outputs for *NIX, cygwin and native
  windows (using mingw).
* cleanup pin code, always use MAX_PIN_LENGTH, proper cleanup.
* new use PKCS11_CTX_init_args (David Smith)
* fix segfault in init_args code.
* needs new version of libp11 (0.2.4 or later).

New in 0.1.4; 2007-07-11; Andreas Jellinghaus
* update wiki export script.
* new urls.