@@ -1,36 +1,46 @@
+#define OPENSSL_STATIC if you have visual studio compatible with OpenSSL's static binaries
+#OPENSSL_STATIC_DIR = static
 
-LIBP11_DIR = c:\projects\libp11
-!IF "$(BUILD_FOR)" == "WIN64" 
-OPENSSL_DIR = C:\OpenSSL-Win64 
-!ELSE 
-OPENSSL_DIR = C:\OpenSSL-Win32 
-!ENDIF 
-OPENSSL_INC = /I$(OPENSSL_DIR)\include 
- 
-!IF "$(DEBUG_DEF)" == "/DDEBUG" 
-OPENSSL_LIB = $(OPENSSL_DIR)\lib\VC\$(OPENSSL_STATIC_DIR)\libeay32MTd.lib user32.lib advapi32.lib crypt32.lib gdi32.lib
-!ELSE 
-OPENSSL_LIB = $(OPENSSL_DIR)\lib\VC\$(OPENSSL_STATIC_DIR)\libeay32MT.lib user32.lib advapi32.lib crypt32.lib gdi32.lib
-!ENDIF 
+!IF "$(LIBP11_DIR)" == ""
+LIBP11_DIR = C:\projects\libp11
+!ENDIF
 
-LIBP11_INC = /I$(LIBP11_DIR)\src
-LIBP11_LIB = $(LIBP11_DIR)\src\libp11.lib
-
-ALL_INCLUDES= $(OPENSSL_INC) $(LIBP11_INC)
-
-!IF "$(DEBUG_DEF)" == "/DDEBUG"
-LINKDEBUGFLAGS = /NODEFAULTLIB:LIBCMT /DEBUG
-CODE_OPTIMIZATION =
-COPTS =  /GS /W3 /D_CRT_SECURE_NO_DEPRECATE /MTd /nologo $(ALL_INCLUDES) /I..\ /I. /D_WIN32_WINNT=0x0502 /DWIN32_LEAN_AND_MEAN /DDEBUG /Zi /Od
-!ELSE
-LINKDEBUGFLAGS = /NODEFAULTLIB:LIBCMTD
-COPTS =  /GS /W3 /D_CRT_SECURE_NO_DEPRECATE /MT /nologo $(ALL_INCLUDES) /I..\ /I. /D_WIN32_WINNT=0x0502 /DWIN32_LEAN_AND_MEAN
+!IF "$(DEBUG)" != ""
+DEBUG_SUFFIX = d
+DEBUG_COMPILE = /DDEBUG /Zi /Od
+DEBUG_LINK = /DEBUG
 !ENDIF
 
 !IF "$(BUILD_FOR)" == "WIN64"
-LINKFLAGS = /NOLOGO /INCREMENTAL:NO /MACHINE:X64 /MANIFEST:NO /NODEFAULTLIB:MSVCRTD  /NODEFAULTLIB:MSVCRT /NXCOMPAT /DYNAMICBASE $(LINKDEBUGFLAGS)
-LIBFLAGS =  /nologo /machine:x64
-!ELSE
-LINKFLAGS = /NOLOGO /INCREMENTAL:NO /MACHINE:X86 /MANIFEST:NO /NODEFAULTLIB:MSVCRTD  /NODEFAULTLIB:MSVCRT /NXCOMPAT /DYNAMICBASE $(LINKDEBUGFLAGS)
-LIBFLAGS =  /nologo /machine:x86
+MACHINE = /MACHINE:X64
+!IF "$(OPENSSL_DIR)" == ""
+OPENSSL_DIR = C:\OpenSSL-Win64
 !ENDIF
+!ELSE
+MACHINE = /MACHINE:X86
+!IF "$(OPENSSL_DIR)" == ""
+OPENSSL_DIR = C:\OpenSSL-Win32
+!ENDIF
+!ENDIF
+
+!IF "$(OPENSSL_INC)" == ""
+OPENSSL_INC = /I$(OPENSSL_DIR)\include
+!ENDIF
+
+!IF "$(OPENSSL_STATIC_DIR)" == ""
+OPENSSL_LIB = $(OPENSSL_DIR)\lib\libeay32.lib
+!ELSE
+OPENSSL_LIB = $(OPENSSL_DIR)\lib\VC\static\libeay32MT$(DEBUG_SUFFIX).lib
+!ENDIF
+
+!IF "$(LIBP11_INC)" == ""
+LIBP11_INC = /I$(LIBP11_DIR)\src
+!ENDIF
+
+!IF "$(LIBP11_LIB)" == ""
+LIBP11_LIB = $(LIBP11_DIR)\src\libp11.lib
+!ENDIF
+
+CLFLAGS =  /nologo /GS /W3 /D_CRT_SECURE_NO_DEPRECATE /MT$(DEBUG_SUFFIX) $(OPENSSL_INC) $(LIBP11_INC) /D_WIN32_WINNT=0x0502 /DWIN32_LEAN_AND_MEAN $(DEBUG_COMPILE)
+
+LINKFLAGS = /NOLOGO /INCREMENTAL:NO $(MACHINE) /MANIFEST:NO /NXCOMPAT /DYNAMICBASE $(DEBUG_LINK)
